# mthlib

./: README.md  setup.cfg  setup.py
src/mthlib/: matrix.py  polynomial.py  vector.py
tests/: matrix_test.py  polynomial_test.py  vector_test.py
