[metadata]
name = <mthlib>
version = <version number: 0.3.0>
license = <MIT>
description = <A toy python math library>
long_description = file: README.rst
author = <Jimrox Odezi>
author_email = <Optional: author e-mail>
classifiers=
   <classifier 1>
   <classifier 2>
   <...>
   <classifier m>

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   <python 3.8 >

[options.packages.find]
where=src